--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@roadiehq/backstage-plugin-github-pull-requests",
-  "version": "0.7.8",
+  "name": "@lvfs/backstage-plugin-github-pull-requests",
+  "version": "0.7.9",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
@@ -12,7 +12,7 @@
   },
   "repository": "github:RoadieHQ/backstage-plugin-github-pull-requests",
   "publishConfig": {
-    "access": "public",
+    "access": "restricted",
     "main": "dist/index.esm.js",
     "types": "dist/index.d.ts"
   },
@@ -27,8 +27,8 @@
     "clean": "backstage-cli clean"
   },
   "dependencies": {
-    "@backstage/catalog-model": "^0.7.1",
-    "@backstage/core": "^0.6.1",
+    "@backstage/catalog-model": ">=0.7.1",
+    "@backstage/core": ">=0.6.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@octokit/rest": "^18.0.0",
@@ -43,9 +43,9 @@
     "react-use": "^15.3.6"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.6.0",
-    "@backstage/dev-utils": "^0.1.10",
-    "@backstage/test-utils": "^0.1.7",
+    "@backstage/cli": ">=0.6.0",
+    "@backstage/dev-utils": ">=0.1.10",
+    "@backstage/test-utils": ">=0.1.7",
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.4.1",
     "msw": "^0.25.0"
